# taichi_3d_ellipsoid

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_example.py
docs/: index.html  index.js  index_rasterization.js  index_raytracing.js
taichi_3d_ellipsoid/: __init__.py  basic.py  rasterization.py  ray_tracing.py
